[tool.poetry]
name = "dzbee"
version = "0.1.1-alpha.3"
description = "pack_name descr "
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/dzbee"

[tool.poetry.dependencies]
python = "^3.8.3"
logzero = "^1.7.0"
icecream = "^2.1.1"
install = "^1.3.5"
aset2pairs = "^0.1.0"
json-de2zh = "^0.1.1"
cchardet = "^2.1.7"
Morfessor = "^2.0.6"
polyglot = "^16.7.4"
typer = "^0.4.1"
Jinja2 = "^3.1.2"
XlsxWriter = "^3.0.3"
holoviews = { version = "^1.14.8", optional = true }
plotly = { version = "^5.6.0", optional = true }
seaborn = { version = "^0.11.2", optional = true }

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test or poetry run poe test"
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint dzbee" }
format = "black tests dzbee"
docstyle = "pydocstyle --convention=google tests dzbee"
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[tool.poetry.extras]
plot = ["holoviews", "plotly", "seaborn"]

[tool.poetry.scripts]
"dzbee" = "dzbee.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
